# tarea-pds-property-based-testing

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt  validate_fixes.py
src/user_crud/: crud.py  models.py
tests/: test_create_properties.py  test_delete_properties.py  test_read_properties.py  test_update_properties.py
